--- a/.htaccess
+++ b/.htaccess
@@ -20,6 +20,7 @@ ErrorDocument 500 /error.php
 
 # Overload PHP variables:
 <IfModule mod_php4.c>
+   php_value register_globals        0
    php_value track_vars              1
    php_value short_open_tag          1
    php_value magic_quotes_gpc        0
